打地鼠游戏模板

--- a/index.html
+++ b/index.html
@@ -6,16 +6,21 @@
 	<title>Examples</title>
 </head>
 <body>
-	<div id="app">
-		<div class="header">
-			<ul class="header-content">
-				<li class="header-item">推荐</li>
-				<li class="header-item active">新闻</li>
-				<li class="header-item">娱乐</li>
-				<li class="header-item">体育</li>
-				<li class="header-item">图片</li>
-				<li class="header-item">财经</li>
+	<div id="gameplay">
+		<div class="game">
+			<ul class="game-content">
+				<li class="game-item"><a class="item-mouse"></a></li>
+				<li class="game-item"><a class="item-mouse"></a></li>
+				<li class="game-item"><a class="item-mouse"></a></li>
+				<li class="game-item"><a class="item-mouse"></a></li>
+				<li class="game-item"><a class="item-mouse"></a></li>
+				<li class="game-item"><a class="item-mouse"></a></li>
+				<li class="game-item"><a class="item-mouse"></a></li>
+				<li class="game-item"><a class="item-mouse"></a></li>
+				<li class="game-item"><a class="item-mouse"></a></li>
 			</ul>
+			<button id="startGameBtn">开始游戏</button>
+			<div class="ganme-time">剩余时间：<em>60</em></div>	
 		</div>
 	</div>
 	<script type="text/javascript" src="./build/bundle.js">
